[Bug] Update z-index for header (#3642)

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -313,6 +313,7 @@
             width: 100vw;
             transform: translateX(-50%);
             border-top: 0;
+            z-index: 500;
         }
     }
 
